--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/fonts/stylesheet.css">
 
     <title>Liz Terwilliger for Congress 2022 - Landing Page</title>
 </head>
@@ -30,17 +30,27 @@
 <body>
     <div class="container">
         <header>
-            <div>
-                <h1 class="slogan">
-                    <div>Reform Congress</div>
-                    <div>with</div>
-                    <div>Liz Terwilliger</div>
-                </h1>
-            </div>
+            <h1 class="slogan">
+                <div class="flex-center lora uppercase reform">Reform</div>
+                <div class="flex-center lora uppercase congress">Congress</div>
+                <div class="flex-center proxima_novaregular liz"><span class="moontimeregular with">with</span>Liz Terwilliger</div>
+            </h1>
         </header>
-
         <main>
-            <div class="banner">
+            <div class="flex-center">
+                <h2 class="main-summary roboto"><span class="reform-congress">Reform Congress</span> is a non-partisan group that promotes:</h2>
+            </div>
+            <div class="flex-center">
+                <ul class="platform-points">
+                    <li>A common-sense Congress that accepts their Constitutional responsibilities</li>
+                    <li>Laws that are clear in language</li>
+                    <li>Fiscal responsibility, Transparent budgets</li>
+                    <li>Removal of barriers to personal and economic growth</li>
+                    <li>Term limits for representatives</li>
+                    <li>Inclusion of third-party and Independent Congress members</li>
+                </ul>
+            </div>
+            <div class="banner flex-center">
                 <img alt="Liz Terwilliger for Congress 2022" src="img/logo.svg">
             </div>
         </main>
@@ -48,13 +58,6 @@
             &copy; 2022 Liz Terwilliger for Congress - Site by <a target="_bergerland" href="https://www.berger.land">Phillip R. Berger</a>
         </footer>
     </div>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script> -->
-    <!-- <script src="js/main.js" defer></script> -->
 </body>
 
 </html>
