Additional clean up and styling

--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,12 @@
             <h1 class="slogan">
                 <div class="flex-center lora uppercase reform">Reform</div>
                 <div class="flex-center lora uppercase congress">Congress</div>
-                <div class="flex-center proxima_novaregular liz"><span class="moontimeregular with">with</span>Liz Terwilliger</div>
+                <!-- <div class="flex-center proxima_novaregular liz"><span class="moontimeregular with">with</span>Liz Terwilliger</div> -->
             </h1>
+            <div class="waves-container">
+                <img src="img/waves.svg" />
+                <!-- <img src="img/waves-gold.svg" /> -->
+            </div>
         </header>
         <main>
             <div class="flex-center">
