Additional clean up Added our plendge link

--- a/public/index.html
+++ b/public/index.html
@@ -54,11 +54,16 @@
                     <li>Inclusion of third-party and Independent Congress members</li>
                 </ul>
             </div>
+            <div class="flex-center pledge">
+                <button tabindex="-1">
+                    <a href="https://www.lizterwilligerforcongress.org/donate/">Our Pledge</a>
+                </button>
+            </div>
             <div class="banner flex-center">
                 <img alt="Liz Terwilliger for Congress 2022" src="img/logo.svg">
             </div>
         </main>
-        <footer>
+        <footer class="flex-center">
             &copy; 2022 Liz Terwilliger for Congress - Site by <a target="_bergerland" href="https://www.berger.land">Phillip R. Berger</a>
         </footer>
     </div>
