--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
             </div>
         </main>
         <footer class="flex-center">
-            &copy; 2022 Liz Terwilliger for Congress - Site by <a target="_bergerland" href="https://www.berger.land">Phillip R. Berger</a>
+            &copy;2022 Liz Terwilliger for US Congress - Site by &nbsp;<a target="_bergerland" href="https://www.berger.land">Phillip R. Berger</a>
         </footer>
     </div>
 </body>
