More clean up added byline

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/fonts/stylesheet.css">
 
-    <title>Liz Terwilliger for Congress 2022 - Landing Page</title>
+    <title>Reform Congress (Liz Terwilliger for Congress 2022)</title>
 </head>
 
 <body>
@@ -63,8 +63,10 @@
                 <img alt="Liz Terwilliger for Congress 2022" src="img/logo.svg">
             </div>
         </main>
-        <footer class="flex-center">
-            &copy;2022 Liz Terwilliger for US Congress - Site by &nbsp;<a target="_bergerland" href="https://www.berger.land">Phillip R. Berger</a>
+        <footer class="flex-center wrap">
+            <div>&copy;2022 Liz Terwilliger for Congress - Site by &nbsp;<a target="_bergerland" href="https://www.berger.land">Phillip R. Berger</a></div>
+            <div>PAID FOR BY</div>
+            <div>Website paid for by Liz Terwilliger for Congress.</div>
         </footer>
     </div>
 </body>
