Added pledge and pledge link

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
             </div>
             <div class="flex-center pledge">
                 <button tabindex="-1">
-                    <a href="https://www.lizterwilligerforcongress.org/donate/">Our Pledge</a>
+                    <a href="pdf/pledge.pdf">Our Pledge</a>
                 </button>
             </div>
             <div class="banner flex-center">
